Add an initial structure and placeholder content

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <html>
   <head>
     <title>My blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p>This is the beginning of my website home page.</p>
-    <p>It will eventually contain a list of links to all my blogs.</p>
+    <!--Menu navigation bar-->
+    <header>
+      <h1>Title</h1>
+      <ul>
+        <li><a href="#">Item 1</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Item 3</a></li>
+        <li><a href="#">Item 4</a></li>
+      </ul>
+    </header>
+
+    <!--Intro section-->
+    <section>
+      <h1>Kia ora Taiao! (Hello World!)</h1>
+      <p>This is the beginning of my website home page.</p>
+      <p>It will eventually contain a list of links to all my blogs.</p>
+    </section>
+
+    <!--Blog articles-->
+    <section>
+      <img src="#" />
+      <article>Article 1</article>
+    </section>
+
+    <!--About me-->
+    <section>
+      <h2>About me</h2>
+      <p>Summary about myself</p>
+      <img src="#" />
+    </section>
+
+
+    <!--Third section-->
+  <section>
+    <img src="#">
+    <h2></h2>Another section</h2>
+    <p>Summary</p>
+  </section>
+
+  <footer>Created by me!</footer>
+
+
   </body>
 </html>
+
