--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
   <head>
     <title>My blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta link rel="stylesheet" type="text/css" href="styles/main.css" />
   </head>
   <body>
     <!--Menu navigation bar-->
