Add styling to sections

--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     </header>
 
     <!--Intro section-->
-    <section>
+    <section class="dark-green">
       <h1>Kia ora Taiao! (Hello World!)</h1>
       <p>This is the beginning of my website home page.</p>
       <p>It will eventually contain a list of links to all my blogs.</p>
     </section>
 
     <!--Blog articles-->
-    <section>
+    <section class="med-green">
       <img src="#" />
       <article>Article 1</article>
     </section>
 
     <!--About me-->
-    <section>
+    <section class="light-green">
       <h2>About me</h2>
       <p>Summary about myself</p>
       <img src="#" />
