--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>My blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta link rel="stylesheet" type="text/css" href="styles/main.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
