Troubleshoot flexbox alignment in main menu

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
   </head>
   <body>
     <!--Menu navigation bar-->
+  
+  <div id="main-menu">
     <header>
-      <h1>Title</h1>
-      <ul>
-        <li><a href="#">Item 1</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Item 3</a></li>
-        <li><a href="#">Item 4</a></li>
-      </ul>
+
+      <h1 id="menu-title">Title</h1>
+      
+
+      <div id="navigation">
+        <div class="menu-item"><a href="#">Item 1</a></div>
+        <div class="menu-item"><a href="#">Blog</a></div>
+        <div class="menu-item"><a href="#">Item 3</a></div>
+        <div class="menu-item"><a href="#">Item 4</a></div>
+      </div>
     </header>
+  </div>
 
     <!--Intro section-->
     <section class="dark-green">
