--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       
 
       <div id="navigation">
-        <div class="menu-item"><a href="#">Item 1</a></div>
         <div class="menu-item"><a href="#">Blog</a></div>
-        <div class="menu-item"><a href="#">Item 3</a></div>
-        <div class="menu-item"><a href="#">Item 4</a></div>
+        <div class="menu-item"><a href="#">About</a></div>
+        <div class="menu-item"><a href="#">Item</a></div>
+        <div class="menu-item"><a href="#">Item</a></div>
       </div>
     </header>
   </div>
