Add The Story of Te Houtaewa blog article

--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@
   <head>
     <title>My blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Menu navigation bar-->
-  
-  <div id="main-menu">
-    <header>
 
-      <h1 id="menu-title">Title</h1>
-      
+    <div id="main-menu">
+      <header>
+        <h1 id="menu-title">Title</h1>
 
-      <div id="navigation">
-        <div class="menu-item"><a href="#">Blog</a></div>
-        <div class="menu-item"><a href="#">About</a></div>
-        <div class="menu-item"><a href="#">Item</a></div>
-        <div class="menu-item"><a href="#">Item</a></div>
-      </div>
-    </header>
-  </div>
+        <div id="navigation">
+          <div class="menu-item"><a href="#" class="menu-link">Blog</a></div>
+          <div class="menu-item"><a href="#" class="menu-link">About</a></div>
+          <div class="menu-item"><a href="#" class="menu-link">Item</a></div>
+          <div class="menu-item"><a href="#" class="menu-link">Item</a></div>
+        </div>
+      </header>
+    </div>
 
     <!--Intro section-->
     <section class="dark-green">
@@ -37,27 +38,25 @@
     <!--Blog articles-->
     <section class="med-green">
       <img src="#" />
-      <article>Article 1</article>
+      <article>The Story of Te Houtaewa</article>
     </section>
 
     <!--About me-->
-    <section class="light-green">
+    <section class="lighter-green">
       <h2>About me</h2>
       <p>Summary about myself</p>
       <img src="#" />
     </section>
 
-
     <!--Third section-->
-  <section>
-    <img src="#">
-    <h2></h2>Another section</h2>
-    <p>Summary</p>
-  </section>
+    <section class="lightest-green">
+      <img src="#" />
+      <h2>Another section</h2>
+      <p>Summary</p>
+    </section>
 
-  <footer>Created by me!</footer>
-
-
+    <footer>
+      <p>Created by me!</p>
+    </footer>
   </body>
 </html>
-
