Add content to section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <header>
         <h1 id="menu-title">Title</h1>
 
-        <div id="navigation">
-          <div class="menu-item"><a href="#" class="menu-link">Blog</a></div>
-          <div class="menu-item"><a href="#" class="menu-link">About</a></div>
-          <div class="menu-item"><a href="#" class="menu-link">Item</a></div>
-          <div class="menu-item"><a href="#" class="menu-link">Item</a></div>
-        </div>
+        <ul id="navigation">
+          <li class="menu-item"><a href="#" class="menu-link">Blog</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">About</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
+        </ul>
       </header>
     </div>
 
@@ -38,7 +38,10 @@
     <!--Blog articles-->
     <section class="med-green">
       <img src="#" />
-      <article>The Story of Te Houtaewa</article>
+      <article>
+        <h2>The Story of Te Houtaewa</h2>
+        <p>Summary</p>
+      </article>
     </section>
 
     <!--About me-->
