Change divs to list items in main menu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html lang="en">
   <head>
     <title>My blog</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=100vh, initial-scale=1"
+    />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
