--- a/index.html
+++ b/index.html
@@ -30,32 +30,40 @@
 
     <!--Intro section-->
     <section class="dark-green">
-      <h1>Kia ora Taiao! (Hello World!)</h1>
-      <p>This is the beginning of my website home page.</p>
-      <p>It will eventually contain a list of links to all my blogs.</p>
+      <div>
+        <h1>Kia ora Taiao! (Hello World!)</h1>
+        <p>This is the beginning of my website home page.</p>
+        <p>It will eventually contain a list of links to all my blogs.</p>
+      </div>
     </section>
 
     <!--Blog articles-->
     <section class="med-green">
-      <img src="#" />
-      <article>
-        <h2>The Story of Te Houtaewa</h2>
-        <p>Summary</p>
-      </article>
+      <div class="row">
+        <img src="#" />
+        <article>
+          <h2>The Story of Te Houtaewa</h2>
+          <p>Summary</p>
+        </article>
+      </div>
     </section>
 
     <!--About me-->
     <section class="lighter-green">
-      <h2>About me</h2>
-      <p>Summary about myself</p>
-      <img src="#" />
+      <div class="row">
+        <h2>About me</h2>
+        <p>Summary about myself</p>
+        <img src="#" />
+      </div>
     </section>
 
     <!--Third section-->
     <section class="lightest-green">
-      <img src="#" />
-      <h2>Another section</h2>
-      <p>Summary</p>
+      <div class="row">
+        <img src="#" />
+        <h2>Another section</h2>
+        <p>Summary</p>
+      </div>
     </section>
 
     <footer>
