Add column containers into row

--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
     <!--Blog articles-->
     <section class="med-green">
       <div class="row">
-        <img src="#" />
-        <article>
-          <h2>The Story of Te Houtaewa</h2>
-          <p>Summary</p>
-        </article>
+        <div class="column">
+          <img src="#" />
+        </div>
+        <div class="column">
+          <article>
+            <h2>The Story of Te Houtaewa</h2>
+            <p>Summary</p>
+          </article>
+        </div>
+        </div>
       </div>
     </section>
 
