--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="#" />
+          <img src="assets/articles.png"/>
         </div>
         <div class="column">
           <article>
@@ -73,6 +73,7 @@
 
     <footer>
       <p>Created by me!</p>
+      <a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a>
     </footer>
   </body>
 </html>
