Add images to sections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png"/>
+          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
         </div>
         <div class="column">
           <article>
@@ -58,14 +58,14 @@
       <div class="row">
         <h2>About me</h2>
         <p>Summary about myself</p>
-        <img src="#" />
+        <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
       </div>
     </section>
 
     <!--Third section-->
     <section class="lightest-green">
       <div class="row">
-        <img src="#" />
+        <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
         <h2>Another section</h2>
         <p>Summary</p>
       </div>
