--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <footer>
       <p>Created by me!</p>
-      <a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a>
+      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a></p>
     </footer>
   </body>
 </html>
