Changed sections to identical formatting

--- a/index.html
+++ b/index.html
@@ -56,18 +56,32 @@
     <!--About me-->
     <section class="lighter-green">
       <div class="row">
-        <h2>About me</h2>
-        <p>Summary about myself</p>
-        <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+        <div class="column">
+          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+        </div>
+        <div class="column">
+          <article>
+            <h2>Article 2</h2>
+            <p>Summary</p>
+          </article>
+        </div>
+        </div>
       </div>
     </section>
 
     <!--Third section-->
     <section class="lightest-green">
       <div class="row">
-        <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
-        <h2>Another section</h2>
-        <p>Summary</p>
+        <div class="column">
+          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+        </div>
+        <div class="column">
+          <article>
+            <h2>Article 3</h2>
+            <p>Summary</p>
+          </article>
+        </div>
+        </div>
       </div>
     </section>
 
