--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="column">
           <article>
-            <h2>Article 2</h2>
+            <h2><a href="#">Article 2</a></h2>
             <p>Summary</p>
           </article>
         </div>
