--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="column">
           <article>
-            <h2>The Story of Te Houtaewa</h2>
+            <h2><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></h2>
             <p>Summary</p>
           </article>
         </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="column">
           <article>
-            <h2>Article 3</h2>
+            <h2><a href="#">Article 3</a></h2>
             <p>Summary</p>
           </article>
         </div>
