--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     <div id="main-menu">
       <header>
-        <h1 id="menu-title">Title</h1>
+        <h1 id="menu-title">Hannah's Blog</h1>
 
         <ul id="navigation">
-          <li class="menu-item"><a href="#" class="menu-link">Blog</a></li>
+          <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
           <li class="menu-item"><a href="#" class="menu-link">About</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Articles</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
         </ul>
       </header>
