Add link to blog article

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="#">Article 2</a></h2>
-            <p>Summary</p>
+            <h2><a href="blog/html-css.html">Class and ID selectors</a></h2>
+            <p>Find out the best practices for using both!</p>
           </article>
         </div>
         </div>
