Add links to new blog posts

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="#">Article 3</a></h2>
+            <h2><a href="../HannahBurgoyne.github.io/blog/learning-plan.html">Learning Plan</a></h2>
             <p>Summary</p>
           </article>
         </div>
@@ -95,7 +95,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="#">Article 4</a></h2>
+            <h2><a href="../HannahBurgoyne.github.io/blog/identity-values.html">Identity, Values and Strengths</a></h2>
             <p>Summary</p>
           </article>
         </div>
