Add missing summaries

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="column">
           <article>
             <h2><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></h2>
-            <p>Summary</p>
+            <!--<p>Summary</p>-->
           </article>
         </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="column">
           <article>
             <h2><a href="../HannahBurgoyne.github.io/blog/learning-plan.html">Learning Plan</a></h2>
-            <p>Summary</p>
+            <p>How I plan to use my time here</p>
           </article>
         </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="column">
           <article>
             <h2><a href="../HannahBurgoyne.github.io/blog/identity-values.html">Identity, Values and Strengths</a></h2>
-            <p>Summary</p>
+            <p>Taking a look at my own source code</p>
           </article>
         </div>
         </div>
