Fix broken links further

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="/blog/learning-plan.html">Learning Plan</a></h2>
+            <h2><a href="blog/learning-plan.html">Learning Plan</a></h2>
             <p>How I plan to use my time here</p>
           </article>
         </div>
@@ -95,7 +95,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="/blog/identity-values.html">Identity, Values and Strengths</a></h2>
+            <h2><a href="blog/identity-values.html">Identity, Values and Strengths</a></h2>
             <p>Taking a look at my own source code</p>
           </article>
         </div>
