--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
         <ul id="navigation">
           <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">About</a></li>
+          <li class="menu-item"><a href="about.html" class="menu-link">About</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Articles</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
         </ul>
       </header>
     </div>
