--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <!--Article 1-->
-    <section class="dark-green">
+    <section class="darkest-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -54,7 +54,7 @@
     </section>
 
     <!--Article 2-->
-    <section class="med-green">
+    <section class="dark-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -70,7 +70,7 @@
     </section>
 
     <!--Article 3-->
-    <section class="lighter-green">
+    <section class="med-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -87,7 +87,7 @@
 
 
      <!--Article 4-->
-     <section class="lightest-green">
+     <section class="lighter-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -102,6 +102,21 @@
       </div>
     </section>
 
+     <!--Article 5-->
+     <section class="lightest-green">
+      <div class="row">
+        <div class="column">
+          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+        </div>
+        <div class="column">
+          <article>
+            <h2><a href="blog/identity-values.html">Finding your emotional intelligence</a></h2>
+            <p>Looking at how EQ can set us up for success</p>
+          </article>
+        </div>
+        </div>
+      </div>
+    </section>
     <footer>
       <p>Created by me!</p>
       <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a></p>
