Amend link to emotional intelligence blog article

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/identity-values.html">Finding your emotional intelligence</a></h2>
+            <h2><a href="blog/emotional-intelligence.html">Finding your emotional intelligence</a></h2>
             <p>Looking at how EQ can set us up for success</p>
           </article>
         </div>
