Amend page content to new homepage structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul id="navigation">
           <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
           <li class="menu-item"><a href="about.html" class="menu-link">About</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Articles</a></li>
+          <li class="menu-item"><a href="articles.html" class="menu-link">Articles</a></li>
         </ul>
       </header>
     </div>
@@ -45,8 +45,9 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></h2>
-            <!--<p>Summary</p>-->
+            <h2>Blog articles</h2>
+            <p>All my latest writing on programming, human skills, and my journey through Dev Academy Aotearoa</p>
+            <button><a href="articles.html">Read now</a></button>
           </article>
         </div>
         </div>
@@ -57,12 +58,13 @@
     <section class="dark-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img src="assets/account.png" alt="user account graphic" width="150px" height="150px"/>
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/html-css.html">Class and ID selectors</a></h2>
-            <p>Find out the best practices for using both!</p>
+            <h2>About me</h2>
+            <p>Meet the person behind this website!</p>
+            <button><a href="about.html">Read now</a></button>
           </article>
         </div>
         </div>
@@ -77,8 +79,10 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/learning-plan.html">Learning Plan</a></h2>
-            <p>How I plan to use my time here</p>
+            <h2>My latest article</h2>
+            <h2><a href="blog/javascript-dom.html">Working with JavaScript in the DOM</a></h2>
+            <p>Making websites come to life</p>
+            <button><a href="blog/javascript-dom.html">Read now</a></button>
           </article>
         </div>
         </div>
@@ -90,19 +94,28 @@
      <section class="lighter-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <a href="https://github.com/HannahBurgoyne"
+            ><img
+              src="assets/github-mark.png"
+              alt="github logo"
+              width="150px"
+              height="150px"
+          /></a>
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/identity-values.html">Identity, Values and Strengths</a></h2>
-            <p>Taking a look at my own source code</p>
+            <h2>Find me on GitHub</h2>
+            <p>See all my latest coding projects in one place!</p>
+            <button><a href="https://github.com/HannahBurgoyn">Visit github.com</a></button>
+            
           </article>
         </div>
         </div>
       </div>
     </section>
 
-     <!--Article 5-->
+    <!--
+     
      <section class="lightest-green">
       <div class="row">
         <div class="column">
@@ -117,9 +130,10 @@
         </div>
       </div>
     </section>
+    -->
     <footer>
       <p>Created by me!</p>
-      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Icons created by Iconjam - Flaticon</a></p>
     </footer>
   </body>
 </html>
