--- a/articles.html
+++ b/articles.html
@@ -134,7 +134,7 @@
 
     <footer>
       <p>Created by me!</p>
-      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Publication icons created by Iconjam - Flaticon</a></p>
+      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Icons created by Iconjam - Flaticon</a></p>
     </footer>
   </body>
 </html>
