amend section colors

--- a/articles.html
+++ b/articles.html
@@ -52,7 +52,7 @@
     </section>
 
     <!--Article 2-->
-    <section class="lighter-green">
+    <section class="med-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -85,7 +85,7 @@
 
 
      <!--Article 4-->
-     <section class="lighter-green">
+     <section class="med-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
@@ -117,7 +117,7 @@
     </section>
 
     <!--Article 6-->
-    <section class="lighter-green">
+    <section class="med-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
