--- a/about.html
+++ b/about.html
@@ -24,9 +24,12 @@
           <li class="menu-item">
             <a href="index.html" class="menu-link">Home</a>
           </li>
-          <li class="menu-item"><a href="#" class="menu-link">About</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Articles</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Item</a></li>
+          <li class="menu-item">
+            <a href="about.html" class="menu-link">About</a>
+          </li>
+          <li class="menu-item">
+            <a href="articles.html" class="menu-link">Articles</a>
+          </li>
         </ul>
       </header>
     </div>
