--- a/articles.html
+++ b/articles.html
@@ -21,9 +21,15 @@
         <h1 id="menu-title">Hannah's Blog</h1>
 
         <ul id="navigation">
-          <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
-          <li class="menu-item"><a href="about.html" class="menu-link">About</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Articles</a></li>
+          <li class="menu-item">
+            <a href="index.html" class="menu-link">Home</a>
+          </li>
+          <li class="menu-item">
+            <a href="about.html" class="menu-link">About</a>
+          </li>
+          <li class="menu-item">
+            <a href="articles.html" class="menu-link">Articles</a>
+          </li>
         </ul>
       </header>
     </div>
