fix broken link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <article>
             <h2>Find me on GitHub</h2>
             <p>See all my latest coding projects in one place!</p>
-            <button><a href="https://github.com/HannahBurgoyn">Visit github.com</a></button>
+            <button><a href="https://github.com/HannahBurgoyne">Visit github.com</a></button>
             
           </article>
         </div>
