Add new blog article

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <div class="column">
           <article>
             <h2>My latest article</h2>
-            <h2><a href="blog/javascript-dom.html">Working with JavaScript in the DOM</a></h2>
-            <p>Making websites come to life</p>
+            <h2><a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a></h2>
+            <p>Finding the right frame of mind for success</p>
             <button><a href="blog/javascript-dom.html">Read now</a></button>
           </article>
         </div>
