Add new blog article

--- a/articles.html
+++ b/articles.html
@@ -138,6 +138,22 @@
       </div>
     </section>
 
+     <!--Article 7-->
+     <section class="dark-green">
+      <div class="row">
+        <div class="column">
+          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+        </div>
+        <div class="column">
+          <article>
+            <h2><a href="blog/emotional-intelligence.html">Neuroplasticity and Growth</a></h2>
+            <p>Finding the right frame of mind for success</p>
+          </article>
+        </div>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <p>Created by me!</p>
       <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Icons created by Iconjam - Flaticon</a></p>
