--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2>My latest article</h2>
             <h2><a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a></h2>
             <p>Finding the right frame of mind for success</p>
-            <button><a href="blog/javascript-dom.html">Read now</a></button>
+            <button><a href="blog/neuroplasticity.html">Read now</a></button>
           </article>
         </div>
         </div>
