--- a/articles.html
+++ b/articles.html
@@ -146,7 +146,7 @@
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/emotional-intelligence.html">Neuroplasticity and Growth</a></h2>
+            <h2><a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a></h2>
             <p>Finding the right frame of mind for success</p>
           </article>
         </div>
