Fix incorrect class

--- a/articles.html
+++ b/articles.html
@@ -155,7 +155,7 @@
     </section>
 
      <!--Article 8-->
-     <section class="dark-green">
+     <section class="med-green">
       <div class="row">
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
