--- a/index.html
+++ b/index.html
@@ -77,16 +77,17 @@
         <div class="column">
           <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
         </div>
-        <div class="column">
-          <h2>My latest articles</h2>
-          <div class="horizontal-column">
+          
+        <div class="horizontal-column">
+            <h2>My latest articles</h2>
+            <div>
           <article>
             <h2><a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a></h2>
             <p>Finding the right frame of mind for success</p>
             <button><a href="blog/neuroplasticity.html">Read now</a></button>
           </article>
           </div>
-        <div class="horizontal-column">
+        <div>
           <h2><a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a></h2>
             <p>My wellbeing plan</p>
             <button><a href="blog/te-whare-tapa-wha.html">Read now</a></button>
