Add new article

--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>My blog</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,14 +45,22 @@
     <section class="dark-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/te-houtaewa-template.html">The Story of Te Houtaewa</a></h2>
+            <h2>
+              <a href="blog/te-houtaewa-template.html"
+                >The Story of Te Houtaewa</a
+              >
+            </h2>
             <!--<p>Summary</p>-->
           </article>
-        </div>
         </div>
       </div>
     </section>
@@ -61,14 +69,18 @@
     <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
             <h2><a href="blog/html-css.html">Class and ID selectors</a></h2>
             <p>Find out the best practices for using both!</p>
           </article>
-        </div>
         </div>
       </div>
     </section>
@@ -77,7 +89,12 @@
     <section class="dark-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
@@ -85,39 +102,53 @@
             <p>How I plan to use my time here</p>
           </article>
         </div>
-        </div>
       </div>
     </section>
 
-
-     <!--Article 4-->
-     <section class="med-green">
+    <!--Article 4-->
+    <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/identity-values.html">Identity, Values and Strengths</a></h2>
+            <h2>
+              <a href="blog/identity-values.html"
+                >Identity, Values and Strengths</a
+              >
+            </h2>
             <p>Taking a look at my own source code</p>
           </article>
         </div>
-        </div>
       </div>
     </section>
 
-     <!--Article 5-->
-     <section class="dark-green">
+    <!--Article 5-->
+    <section class="dark-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/emotional-intelligence.html">Finding your emotional intelligence</a></h2>
+            <h2>
+              <a href="blog/emotional-intelligence.html"
+                >Finding your emotional intelligence</a
+              >
+            </h2>
             <p>Looking at how EQ can set us up for success</p>
           </article>
-        </div>
         </div>
       </div>
     </section>
@@ -126,39 +157,58 @@
     <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/javascript-dom.html">Working with JavaScript in the DOM</a></h2>
+            <h2>
+              <a href="blog/javascript-dom.html"
+                >Working with JavaScript in the DOM</a
+              >
+            </h2>
             <p>Making websites come to life</p>
           </article>
         </div>
-        </div>
       </div>
     </section>
 
-     <!--Article 7-->
-     <section class="dark-green">
+    <!--Article 7-->
+    <section class="dark-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
-            <h2><a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a></h2>
+            <h2>
+              <a href="blog/neuroplasticity.html">Neuroplasticity and Growth</a>
+            </h2>
             <p>Finding the right frame of mind for success</p>
           </article>
-        </div>
         </div>
       </div>
     </section>
 
-     <!--Article 8-->
-     <section class="med-green">
+    <!--Article 8-->
+    <section class="med-green">
       <div class="row">
         <div class="column">
-          <img src="assets/articles.png" alt="newspaper graphic" width="150px" height="150px"/>
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
         </div>
         <div class="column">
           <article>
@@ -166,13 +216,42 @@
             <p>My wellbeing plan</p>
           </article>
         </div>
+      </div>
+    </section>
+
+    <!--Article 9-->
+    <section class="dark-green">
+      <div class="row">
+        <div class="column">
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
+        </div>
+        <div class="column">
+          <article>
+            <h2>
+              <a href="blog/problem-solving.html"
+                >My adventures in problem solving code</a
+              >
+            </h2>
+            <p>Learning to trust the process</p>
+          </article>
         </div>
       </div>
     </section>
 
     <footer>
       <p>Created by me!</p>
-      <p><a href="https://www.flaticon.com/free-icons/publication" title="publication icons">Icons created by Iconjam - Flaticon</a></p>
+      <p>
+        <a
+          href="https://www.flaticon.com/free-icons/publication"
+          title="publication icons"
+          >Icons created by Iconjam - Flaticon</a
+        >
+      </p>
     </footer>
   </body>
 </html>
