Update latest articles section

--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
           <div>
             <article>
               <h2>
-                <a href="blog/te-whare-tapa-wha.html">Te Whare Tapa Whā</a>
+                <a href="blog/foundations-reflection.html"
+                  >Reflecting on Foundations</a
+                >
               </h2>
-              <p>My wellbeing plan</p>
+              <p>How Core has helped me become a better programmer</p>
               <button>
-                <a href="blog/te-whare-tapa-wha.html">Read now</a>
+                <a href="blog/foundations-reflection.html">Read now</a>
               </button>
             </article>
           </div>
