Add latest article

--- a/articles.html
+++ b/articles.html
@@ -243,6 +243,30 @@
       </div>
     </section>
 
+    <!--Article 10-->
+    <section class="med-green">
+      <div class="row">
+        <div class="column">
+          <img
+            src="assets/articles.png"
+            alt="newspaper graphic"
+            width="150px"
+            height="150px"
+          />
+        </div>
+        <div class="column">
+          <article>
+            <h2>
+              <a href="blog/foundations-reflection.html"
+                >My reflections on Foundations</a
+              >
+            </h2>
+            <p>How Core has helped me become a better programmer</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <p>Created by me!</p>
       <p>
